# theoraplayer

theoraplayer/: .gitignore  CMakeLists.txt
theoraplayer/src/YUV/libyuv/include/libyuv/: basic_types.h
theoraplayer/src/YUV/libyuv/src/: compare_gcc.cc  compare_posix.cc  rotate_gcc.cc  row_gcc.cc  row_posix.cc  scale_gcc.cc  scale_posix.cc
